<resources>
    <string name="app_name">Budgetku</string>
    <string name="dashboard">Dashboard</string>
    <string name="transactions">Transactions</string>
    <string name="all">All</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="select_year">Select year</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="add_category">Add category</string>
    <string name="no_wallet_selected">No wallet selected</string>
    <string name="balance">Balance</string>
    <string name="empty_balance">-</string>
    <string name="year">2024</string>
    <string name="overview">Overview</string>
    <string name="year_filter">Year filter</string>
    <string name="delete_wallet">Delete wallet?</string>
    <string name="delete_wallet_message">This wallet and its transactions will be deleted</string>
    <string name="delete_transaction">Delete transaction?</string>
    <string name="delete_transaction_message">This transaction will be deleted</string>
    <string name="delete_category">Delete category?</string>
    <string name="delete_category_message">This category will be deleted</string>
    <string name="name">Name</string>
    <string name="delete">Delete</string>
    <string name="edit_category">Edit category</string>
    <string name="add_wallet">Add wallet</string>
    <string name="currency">Currency</string>
    <string name="edit_wallet">Edit wallet</string>
    <string name="wallets">Wallets</string>
    <string name="add_transaction">Add transaction</string>
    <string name="amount">Amount</string>
    <string name="save">Save</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="edit_transaction">Edit transaction</string>
    <string name="date">Date</string>
    <string name="no_transactions_data">No transactions data</string>
    <string name="select_date">Select date</string>
    <string name="title">Title</string>
    <string name="dummy_transaction_title">Installments</string>
    <string name="dummy_transaction_date">26 January 2023</string>
    <string name="dummy_transaction_amount">-Rp500,000</string>
</resources>