<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_transaction"
    style="@style/Widget.Material3.CardView.Filled"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="16dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_decoration"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/colorExpense"
        android:src="@drawable/ic_attach_money"
        app:shapeAppearanceOverlay="@style/RoundedImageStyle"
        app:tint="?attr/colorOnExpense" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_transaction_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_transaction_title"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

        <TextView
            android:id="@+id/tv_transaction_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/dummy_transaction_date"
            android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
            android:textColor="?attr/colorOnSurfaceVariant" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_transaction_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end"
        android:text="@string/dummy_transaction_amount"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textColor="?attr/colorExpense" />

</LinearLayout>